# Rust-Programming-Recipies

./: README.md
Section 1/: Cargo.toml
Section 1/src/: error.rs  lib.rs  main.rs
Section 1/test_data/: transactions.json
Section 2/: Cargo.toml  readme.md
Section 2/src/: combi.rs  gen_range.rs  into.rs  lib.rs  main.rs
Section 3/: Cargo.toml
Section 3/src/: main.rs  v2_closure.rs  v3_rc.rs  v4_channels.rs  v5_pool.rs  v6_rayon.rs  v7_box.rs
Section 3/test_data/: v3_data.txt
Section 4/: Cargo.toml
Section 4/src/: card.rs  lib.rs  svg_mac.rs
Section 5/: Cargo.toml
Section 5/src/: lib.rs  main.rs  simple.rs
Section 6/: Cargo.toml
Section 6/migrations/2019-07-19-100725_create_initial_tables/: down.sql  up.sql
Section 6/migrations/2019-07-19-102550_add_owner_to_poll/: down.sql  up.sql
Section 6/src/: cli_main.rs  lib.rs  models.rs  schema.rs
Section 7/: Cargo.toml  Rocket.toml
Section 7/site/static/: index.html
Section 7/src/: error.rs  main.rs  session.rs
Section 8/cfromr/: Cargo.toml  build.rs
Section 8/cfromr/libbadmath/: CMakeLists.txt  badmath.c
Section 8/cfromr/src/: main.rs
Section 8/dyn_c_lib/: wibble.c
Section 8/dyn_load/: Cargo.toml
Section 8/dyn_load/src/: main.rs
Section 8/rfromc/: Cargo.toml  Makefile  doublerun
Section 8/rfromc/src/: lib.rs  main.c  r_lib.h
