[package]
name = "d1_filework"
version = "0.1.0"
authors = ["matthew <matt@storyfeet.com>"]
edition = "2018"

[lib]
name = "d1_filework"
path = "src/lib.rs"

[[bin]]
name = "d1_load_trans"
path = "src/main.rs"

[dependencies]

serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
failure = "0.1.5"
failure_derive ="0.1.5"
