[package]
name = "d7_rocket"
version = "0.1.0"
authors = ["matthew <matt@storyfeet.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
#failure = "0.1.5"
#failure_derive = "0.1.5"
anyhow="1.0.30"
thiserror="1.0.17"
d6_doodle = {path="../Section 6/"}
diesel = {version = "1.4.6", features = ["postgres"]}
rand = "0.7.0"
maud = {version = "0.21.0", features = ["rocket"]}

[dependencies.rocket_contrib]
version="0.4.2"
default-features = false
features = ["diesel_postgres_pool"]
